--- a/praca dmoowa/form16.html
+++ b/praca dmoowa/form16.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <head>
 <title>Ćwiczenie 11</title>
 <meta charset='UTF-8'>
@@ -10,8 +10,32 @@
 Imie:
 </label>
 <input type='text' id='imie' name='polimie'>
-</p>	
+</p>
 <p>
+<label for='Nazwisko'>
+Nazwisko:
+</label>
+<input type='text' id='nazwisko' name='polnazwisko'>
+</p>
+<p>
+		<label for='login'>
+			Login:
+		</label>
+		<input type='text' id='login' name='pollogin'>
+	</p>	
+	<p>
+		<label for='haslo'>
+			Hasło:
+		</label>
+		<input type='password' id='haslo' name='polhaslo'>
+	</p>
+<p>
+<p>
+<label for='Uwagi'>
+UWAGI:
+</label>
+<input type='text' id='uwagi' name='poluwagi'>
+</p>
 		<input type='submit' value='zaloguj' name='przsubmit'>
 </p>
 </form>
